work/rules.v4
# Generated by iptables-save v1.4.14 on Wed Sep 17 16:56:48 2014
*nat
:PREROUTING ACCEPT [105:7971]
:INPUT ACCEPT [43:3751]
:OUTPUT ACCEPT [21:1407]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Wed Sep 17 16:56:48 2014
# Generated by iptables-save v1.4.14 on Wed Sep 17 16:56:48 2014
*filter
:INPUT ACCEPT [839:285450]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [732:287960]
-A INPUT -i eth+ -m pkttype --pkt-type broadcast -j ACCEPT
-A INPUT -i eth+ -p tcp -m tcp -m multiport --dports 139,445 -j ACCEPT
-A INPUT -i eth+ -p udp -m udp -m multiport --dports 137,138 -j ACCEPT
-A FORWARD -i eth1 -o eth0 -j ACCEPT
-A FORWARD -i eth0 -o eth1 -j ACCEPT
-A FORWARD -i eth1 -o eth0 -j ACCEPT
-A FORWARD -i eth+ -m pkttype --pkt-type broadcast -j ACCEPT
-A FORWARD -i eth+ -p tcp -m tcp -m multiport --dports 139,445 -j ACCEPT
-A FORWARD -i eth+ -p udp -m udp -m multiport --dports 137,138 -j ACCEPT
COMMIT
# Completed on Wed Sep 17 16:56:48 2014
